Trying to get some debug output

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,13 @@ jobs:
             ##
             docker push ${IMAGE_REPO}/${IMAGE_NAME}:$TS
             docker push ${IMAGE_REPO}/${IMAGE_NAME}:latest
-            ##
+            ####
+            echo ${IMAGE_NAME}
+            echo ${SERVICE_NAME}
+            echo ${SERVICE_NAMESPACE}
+            echo ${IMAGE_REPO}
+            echo ${IMAGE_NAME}
+            ####
             helm upgrade ${IMAGE_NAME} Helm/ --set serviceName="${SERVICE_NAME}",namespace="${SERVICE_NAMESPACE}",image.repository="${IMAGE_REPO}",image.name="${IMAGE_NAME}",image.tag=$TS
       - save_cache:
           key: v1-{{ .Branch }}-{{ epoch }}
