--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
             echo ${IMAGE_REPO}
             echo ${IMAGE_NAME}
             ####
-            kubectl delete job job-${SERVICE_NAMESPACE} -n ${SERVICE_NAMESPACE}
+            kubectl delete job ${SERVICE_NAMESPACE} -n ${SERVICE_NAMESPACE}
             helm upgrade ${IMAGE_NAME} Helm/ --set serviceName="${SERVICE_NAME}",namespace="${SERVICE_NAMESPACE}",image.repository="${IMAGE_REPO}",image.name="${IMAGE_NAME}",image.tag=$TS
       - save_cache:
           key: v1-{{ .Branch }}-{{ epoch }}
